# tfhe-rs-fraud-inference-refactor_V4

./: .gitattributes  .gitignore  Cargo.toml  README.md  REMEDIATION_decrypt.md  REMEDIATION_encrypt.md  REMEDIATION_server_compute.md  SECURITY_lattice_estimate.md  parity_check.py
Benchmark/: FHE_Inference_Benchmark_N2_Standard_16.txt  README.txt  main.rs
scripts/: extract_lr_weights_fixed.py  prepare_features_for_he_encryption.py  train_plaintext_ofc_LR_fine.py
